force-app/main/default/objects/Questions__c/fields/Question_choices__c.field-meta.xml
<CustomField>
    <fullName>Question_choices__c</fullName>
    <label>Question choices</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>