force-app/main/default/objects/Questions__c/fields/Question_Header__c.field-meta.xml
<CustomField>
    <fullName>Question_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Header</label>
    <referenceTo>Question_Header__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>