force-app/main/default/objects/Questions__c/fields/Question_Header_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Question_Header_Sequence__c</fullName>
    <formula>Question_Header__r.Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Header Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>