force-app/main/default/objects/Questions__c/fields/Question_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Question_Sequence__c</fullName>
    <label>Question Sequence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>