force-app/main/default/objects/Questions__c/fields/Question_Sequence_new__c.field-meta.xml
<CustomField>
    <fullName>Question_Sequence_new__c</fullName>
    <label>Questions Sequence</label>
    <length>3</length>
    <type>Text</type>
</CustomField>