force-app/main/default/objects/Questions__c/fields/Question_Sequence_Test__c.field-meta.xml
<CustomField>
    <fullName>Question_Sequence_Test__c</fullName>
    <label>Question Sequence Test</label>
    <length>10</length>
    <type>Text</type>
</CustomField>