force-app/main/default/objects/Questions__c/fields/Sequence2__c.field-meta.xml
<CustomField>
    <fullName>Sequence2__c</fullName>
    <label>Sequence2</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>