force-app/main/default/objects/Questions__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <formula>TEXT(Question_Header_Sequence__c) + &apos;.&apos; + Question_Sequence_new__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequence</label>
    <type>Text</type>
</CustomField>