force-app/main/default/objects/Questions__c/fields/Sequence_Date_Check__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Date_Check__c</fullName>
    <label>Sequence Date Check</label>
    <type>DateTime</type>
</CustomField>