force-app/main/default/objects/Questions__c/validationRules/Question_Sequence_cannot_be_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Question_Sequence_cannot_be_zero</fullName>
    <active>true</active>
    <errorConditionFormula>OR(VALUE( LEFT(Question_Sequence_new__c, 1) )= 0,
ISBLANK(Question_Sequence_new__c) )</errorConditionFormula>
    <errorMessage>Question Sequence value cannot be zero or blank</errorMessage>
</ValidationRule>