force-app/main/default/objects/Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Question_Header__c</columns>
    <columns>Question_choices__c</columns>
    <columns>Question_Header_Sequence__c</columns>
    <columns>Question_Sequence_new__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>